<resources>
    <string name="app_name">ProjectLevel1</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">لیست دانشجو ها </string>
    <string name="second_fragment_label">مشخصات دانشجو </string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="f_name">نام :</string>
    <string name="l_name">نام خانوادگی :</string>
    <string name="picture">بارگذاری تصویر </string>
    <string name="phone_number">شماره تماس :</string>
    <string name="father_name">نام پدر :</string>
    <string name="address">آدرس :</string>
    <string name="submit">ثبت اطلاعات </string>
    <string name="sex">جنسیت  </string>
    <string name="interested">علاقه مندی ها </string>
    <string name="city">محل سکونت </string>
    <string name="register_icon">ثبت نام </string>
    <string name="list_of_student_icon">لیست دانشجو ها </string>
    <string name="title_activity_list_of_student">لیست دانشجو ها</string>
    <string name="title_activity_register">ثبت نام </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <string name="title_activity_login">Login</string>

</resources>