<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShowStudentInfo"
    android:layout_centerInParent="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layoutDirection="rtl"
        style="@style/Theme.ProjectLevel1"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"
            android:layout_marginBottom="@dimen/standard_margin"
            android:id="@+id/avatar_student_info"
            tools:src="@color/black"/>

    <TextView
        android:id="@+id/id_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="5555555"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textSize="20dp"
        android:elegantTextHeight="true"

        />



      <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/f_name"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textSize="@dimen/big_size_font"


        />
        <TextView
            android:id="@+id/f_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5555555"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"

            />
      </LinearLayout>

        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/l_name"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textSize="@dimen/big_size_font"

        />
        <TextView
            android:id="@+id/l_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5555555"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"

            />
        </LinearLayout>




        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_number"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textSize="@dimen/big_size_font"

        />
        <TextView
            android:id="@+id/phone_number_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5555555"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"

            />
        </LinearLayout>



        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sex"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textSize="@dimen/big_size_font"

        />
        <TextView
            android:id="@+id/father_name_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5555555"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"

            />
        </LinearLayout>



        <LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interested"
        android:layout_marginTop="@dimen/standard_margin"
        android:layout_marginRight="@dimen/standard_margin"
        android:textSize="@dimen/big_size_font"

        />
        <TextView
            android:id="@+id/address_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="5555555"
            android:layout_marginTop="@dimen/standard_margin"
            android:layout_marginRight="@dimen/standard_margin"

            />
        </LinearLayout>



        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/city"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"
                android:textSize="@dimen/big_size_font"

                />
            <TextView
                android:id="@+id/city_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="5555555"
                android:layout_marginTop="@dimen/standard_margin"
                android:layout_marginRight="@dimen/standard_margin"

                />
        </LinearLayout>

    </LinearLayout>


</RelativeLayout>